fixed that weird spacing issue
in the top nav with `top: 0px`
#3

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,6 +23,7 @@ div {
   flex-wrap: wrap;
   z-index: 1;
   background-color: black;
+  top: 0px;
 }
 
 .main {
@@ -64,6 +65,9 @@ h2 {
 }
 
 .teamontharea {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 1000px;
 }
 
@@ -75,6 +79,6 @@ h2 {
 .item {
   height: 200px;
   width: 300px;
-  
-
+  padding: 10px;
 }
+
